# aeson-gadt-th

./: .travis.yml  CONTRIBUTING.md  ChangeLog.md  README.md  aeson-gadt-th.cabal  release.nix
.ci/: nixpkgs.nix
.github/workflows/: haskell.yml
src/Data/Aeson/GADT/: TH.hs
test/: Expectations.hs  Test.hs
