cabal-version: 2.0
name: aeson-gadt-th
version: 0.2.1.2
synopsis: Derivation of Aeson instances for GADTs
category: JSON
description: Template Haskell for generating ToJSON and FromJSON instances for GADTs. See <https://github.com/obsidiansystems/aeson-gadt-th/blob/master/README.md README.md> for examples.
license: BSD3
license-file: LICENSE
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
copyright: 2019 Obsidian Systems LLC
build-type: Simple
tested-with:
  GHC  ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5
extra-source-files: README.md
                    ChangeLog.md

flag build-readme
  default: True

library
  exposed-modules: Data.Aeson.GADT.TH
  build-depends: base >= 4.8 && < 4.13
               , aeson >= 1.4 && < 1.5
               , containers >= 0.5 && < 0.7
               , dependent-sum >= 0.6.2 && < 0.7
               , transformers >= 0.5 && < 0.6
               , template-haskell >= 2.11.0 && < 2.15
  hs-source-dirs: src
  default-language: Haskell2010

executable readme
  if !flag(build-readme)
    buildable: False
  build-depends: base
               , aeson
               , dependent-sum
               , dependent-sum-template >= 0.1 && < 0.2
               , dependent-map >= 0.3 && < 0.4
               , aeson-gadt-th
  default-language: Haskell2010
  main-is: README.lhs
  ghc-options: -Wall -optL -q

test-suite aeson-gadt-th-test
  type: exitcode-stdio-1.0
  build-depends: base
               , aeson
               , aeson-qq
               , dependent-sum
               , aeson-gadt-th
               , hspec
               , HUnit
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Test.hs
  other-modules: Expectations

source-repository head
  type:     git
  location: git://github.com/obsidiansystems/aeson-gadt-th.git
