cabal-version: >=2.0
name: aeson-gadt-th
version: 0.2.1.1
synopsis: Derivation of Aeson instances for GADTs
category: JSON
description: Template Haskell for generating ToJSON and FromJSON instances for GADTs. See <https://github.com/obsidiansystems/aeson-gadt-th/blob/master/README.md README.md> for examples.
license: BSD3
license-file: LICENSE
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
copyright: 2019 Obsidian Systems LLC
build-type: Simple
extra-source-files: README.md
                    ChangeLog.md

flag build-readme
  default: True

library
  exposed-modules: Data.Aeson.GADT.TH
  build-depends: base >= 4.8 && < 4.13
               , aeson
               , containers
               , dependent-sum
               , transformers
               , template-haskell
               , th-extras
  hs-source-dirs: src
  default-language: Haskell2010

executable readme
  if !flag(build-readme)
    buildable: False
  build-depends: base
               , aeson
               , dependent-sum
               , dependent-sum-template
               , dependent-map
               , aeson-gadt-th
  default-language: Haskell2010
  main-is: README.lhs
  ghc-options: -Wall -optL -q

test-suite aeson-gadt-th-test
  type: exitcode-stdio-1.0
  build-depends: base
               , aeson
               , aeson-qq
               , dependent-sum
               , aeson-gadt-th
               , hspec
               , HUnit
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Test.hs
  other-modules: Expectations

source-repository head
  type:     git
  location: git://github.com/obsidiansystems/aeson-gadt-th.git
